tests/error/comptime/range_subscript_bounds_check06.bz
// error: begin index 11 is out-of-bounds in range subscript for an array of size 10
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let a = [10: i32]();
		a[11u32..];
	});
}
